--- a/Second.html
+++ b/Second.html
@@ -43,7 +43,7 @@
 <div class="paper">
 <p class="p1">Drag the papers to move!</p>
 </div>
-  <script  src="./index.js"></script>
+  <script  src="./mobile.js"></script>
 
 </body>
 </html>
